# bellande_format

./: LICENSE  README.md
Package/JavaScript/: README.md  package.json
Package/JavaScript/src/: bellande_parser.js
Package/Python/: README.md
Package/Python/src/: bellande_parser.py
Package/Python/src/bellande_parser/: bellande_parser.py
Package/Python/src/bellande_parser/core/: compression.py  custom_types.py  encryption.py  types.py  validation.py
Package/Rust/: .gitignore  README.md  publish.sh
Package/Rust/src/: Cargo.toml  bellande_parser.rs
git_scripts/: push.sh
